# kafka-edge-router

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODEX_PROMPT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  SECURITY.md  clippy.toml  compose.yaml  deny.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml  release.yml  security.yml
config/: README.md  router.production.example.toml  router.toml
crates/router-api/: Cargo.toml
crates/router-api/src/: auth.rs  error.rs  grpc.rs  http.rs  lib.rs  publish.rs  state.rs
crates/router-api/tests/: grpc.rs  publish.rs  sse.rs  websocket.rs
crates/router-api/tests/fixtures/: jwt-key-1-jwks.json  jwt-key-1-private.der  jwt-key-2-jwks.json  jwt-key-2-private.der
crates/router-core/: Cargo.toml
crates/router-core/benches/: matcher.rs  observability.rs
crates/router-core/src/: error.rs  ids.rs  lib.rs  message.rs  metrics.rs  protocol.rs  publisher.rs  route.rs  router.rs  wire.rs
crates/router-kafka/: Cargo.toml
crates/router-kafka/src/: config.rs  decoder.rs  health.rs  ingestor.rs  lib.rs  publisher.rs
crates/router-kafka/tests/: kafka_integration.rs
crates/router-proto/: Cargo.toml  build.rs
crates/router-proto/proto/router/v1/: router.proto
crates/router-proto/src/: lib.rs
crates/router-webhook/: Cargo.toml
crates/router-webhook/src/: config.rs  durable.rs  lib.rs  manager.rs  security.rs
crates/routerd/: Cargo.toml
crates/routerd/src/: config.rs  main.rs  readiness.rs  telemetry.rs
deploy/docker/: README.md
deploy/kubernetes/: README.md  configmap.yaml  deployment.yaml  hpa.yaml  kustomization.yaml  namespace.yaml  network-policy.yaml  pdb.yaml  router.toml.example  secret.example.yaml  service.yaml
deploy/kubernetes/base/: configmap.yaml  deployment.yaml  hpa.yaml  kustomization.yaml  network-policy.yaml  pdb.yaml  service.yaml
deploy/kubernetes/overlays/rc/: kustomization.yaml
deploy/observability/: grafana-dashboard.json  prometheus-alerts.yaml
deploy/systemd/: README.md  routerd.service
docs/: ARCHITECTURE.md  DELIVERY_SEMANTICS.md  IMPLEMENTATION_STATUS.md  MESSAGE_CONTRACT.md  OBSERVABILITY.md  OPERATIONS.md  PERFORMANCE.md  PROTOCOLS.md  QUICKSTART.md  README.md  RELEASE.md  SECURITY.md  SUPPLY_CHAIN.md  TESTING.md  WEBHOOK_OPERATIONS.md
docs/adr/: 0001-full-stream-consumer-group-per-node.md  0002-route-from-kafka-headers.md  0003-bounded-queues-and-slow-consumer-eviction.md  0004-live-delivery-semantics.md  0005-durable-webhook-delivery.md  0006-recipient-routing-dimension.md  0007-verify-third-party-supply-chain.md  README.md
docs/contributing/: CODEX_PROMPT.md
docs/release-evidence/: README.md
docs/releases/: v0.1.0-rc.1.md
examples/: grpcurl.md  publish.json  sse-client.html  websocket-client.html
fuzz/: Cargo.toml
fuzz/fuzz_targets/: commands.rs  kafka_headers.rs  protobuf.rs  webhook_url.rs
scripts/: create-topics.sh  deploy-kubernetes.sh  dev-up.sh  generate-release-notes.py  profile-router.sh  publish-example.sh  requirements.txt  rollback-kubernetes.sh  smoke-test.sh  soak-test.sh  summarize-load.py  test-kafka.sh  validate-repo.py  verify-release-tag.py  wait-for-kafka.sh
supply-chain/: config.toml
tasks/: 000-bootstrap-and-compile.md  001-routing-core-hardening.md  002-kafka-integration.md  003-websocket-productionization.md  004-sse-productionization.md  005-grpc-productionization.md  006-publish-api-hardening.md  007-durable-webhooks.md  008-observability.md  009-security-hardening.md  010-performance-and-release.md  README.md
tools/router-load/: Cargo.toml
tools/router-load/src/: main.rs
