[workspace]
members = [
    "crates/router-api",
    "crates/router-core",
    "crates/router-kafka",
    "crates/router-proto",
    "crates/router-webhook",
    "crates/routerd",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
license = "Apache-2.0"
authors = ["Rust Kafka Edge Router contributors"]
repository = "https://github.com/andrii2g/kafka-edge-router"
homepage = "https://github.com/andrii2g/kafka-edge-router"
description = "High-performance Kafka router for WebSocket, SSE, gRPC, and HTTP webhook delivery"
keywords = ["kafka", "websocket", "sse", "grpc", "router"]
categories = ["network-programming", "asynchronous", "web-programming"]

[workspace.dependencies]
anyhow = "1"
async-stream = "0.3"
async-trait = "0.1"
axum = { version = "0.8.9", features = ["http1", "http2", "json", "macros", "tokio", "ws"] }
base64 = "0.22"
bytes = { version = "1", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
config = { version = "0.15", default-features = false, features = ["toml"] }
dashmap = "6"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
hex = "0.4"
hmac = "0.12"
http = "1"
prost = "0.14"
protoc-bin-vendored = "3"
rdkafka = { version = "0.39", default-features = false, features = ["tokio", "cmake-build", "libz-static"] }
reqwest = { version = "0.13", default-features = false, features = ["http2", "json", "rustls"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
sha2 = "0.10"
smallvec = { version = "1", features = ["serde", "union", "const_generics"] }
thiserror = "2"
tokio = { version = "1", features = ["fs", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = { version = "0.1", features = ["net", "sync"] }
tonic = { version = "0.14", features = ["transport", "router"] }
tonic-prost = "0.14"
tonic-prost-build = "0.14"
tower = "0.5"
tower-http = { version = "0.7", features = ["catch-panic", "compression-gzip", "cors", "limit", "request-id", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1", features = ["serde", "v4"] }

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
