[package]
name = "kafka-edge-router-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
prost = "0.14"
rdkafka = { version = "0.39", default-features = false }
router-kafka = { path = "../crates/router-kafka" }
router-proto = { path = "../crates/router-proto" }
router-webhook = { path = "../crates/router-webhook" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "kafka_headers"
path = "fuzz_targets/kafka_headers.rs"
test = false
doc = false
bench = false

[[bin]]
name = "commands"
path = "fuzz_targets/commands.rs"
test = false
doc = false
bench = false

[[bin]]
name = "webhook_url"
path = "fuzz_targets/webhook_url.rs"
test = false
doc = false
bench = false

[[bin]]
name = "protobuf"
path = "fuzz_targets/protobuf.rs"
test = false
doc = false
bench = false
