[package]
name = "router-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "HTTP, WebSocket, SSE, and gRPC adapters for rust-kafka-edge-router"

[dependencies]
async-stream.workspace = true
axum.workspace = true
base64.workspace = true
bytes.workspace = true
futures-util.workspace = true
http.workspace = true
router-core = { path = "../router-core" }
router-proto = { path = "../router-proto" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
thiserror.workspace = true
tonic.workspace = true
tower-http.workspace = true
tracing.workspace = true

[lints]
workspace = true
