[package]
name = "router-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Transport-independent routing engine for rust-kafka-edge-router"

[dependencies]
async-trait.workspace = true
base64.workspace = true
bytes.workspace = true
dashmap.workspace = true
serde.workspace = true
serde_json.workspace = true
smallvec.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true

[lints]
workspace = true
