[package]
name = "router-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Transport-independent routing engine for kafka-edge-router"

[dependencies]
async-trait.workspace = true
base64.workspace = true
bytes.workspace = true
dashmap.workspace = true
mime.workspace = true
opentelemetry.workspace = true
serde.workspace = true
serde_json.workspace = true
smallvec.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true
uuid.workspace = true

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "matcher"
harness = false

[[bench]]
name = "observability"
harness = false

[lints]
workspace = true
