[package]
name = "router-kafka"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Kafka ingestion and publishing adapters for kafka-edge-router"

[dependencies]
async-trait.workspace = true
bytes.workspace = true
rdkafka.workspace = true
router-core = { path = "../router-core" }
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[lints]
workspace = true
