[package]
name = "router-webhook"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Bounded outbound HTTP webhook delivery for rust-kafka-edge-router"

[dependencies]
bytes.workspace = true
hex.workspace = true
hmac.workspace = true
http.workspace = true
reqwest.workspace = true
router-core = { path = "../router-core" }
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[lints]
workspace = true
