[package]
name = "router-webhook"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Bounded outbound HTTP webhook delivery for kafka-edge-router"

[dependencies]
async-trait.workspace = true
base64.workspace = true
bytes.workspace = true

hex.workspace = true
hmac.workspace = true
http.workspace = true
rdkafka.workspace = true
reqwest.workspace = true
router-core = { version = "0.1.0", path = "../router-core" }
router-kafka = { version = "0.1.0", path = "../router-kafka" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[lints]
workspace = true
