[package]
name = "routerd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "High-performance Kafka edge router daemon"

[[bin]]
name = "routerd"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
config.workspace = true
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry_sdk.workspace = true
router-api = { version = "0.1.0", path = "../router-api" }
router-core = { version = "0.1.0", path = "../router-core" }
router-kafka = { version = "0.1.0", path = "../router-kafka" }
router-webhook = { version = "0.1.0", path = "../router-webhook" }
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
